<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    tools:context=".controller.signup.Signup">


    <View
        android:id="@+id/white_frame"
        android:layout_width="match_parent"
        android:layout_height="545dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="147dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/white_frame" />


    <View
        android:id="@+id/serene_logo"
        android:layout_width="411dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/serene_logo" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/join_us"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="353dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="@color/Grey"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="303dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#B1B0B0"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="253dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#B1B0B0"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/CpasswordInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="203dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#B1B0B0"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/off_button"
        android:enabled="false"
        android:fontFamily="@font/montserrat"
        android:padding="3dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="normal" />


    <TextView
        android:id="@+id/Error"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="253dp"
        android:padding="5dp"
        android:text="@string/error"
        android:textColor="@color/Error" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/signupBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="4dp"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>








